[package]
name = "floppy-fish"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy/x11"
]

[dependencies]
bevy = { version = "0.6.0", default-features = false}
quad-rand = "0.2.1"


[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
